# rust-bot

./: Cargo.toml  todos.md
migrations/: 20240704172240_change_primary_key_to_uuid.down.sql  20240704172240_change_primary_key_to_uuid.up.sql  20240704191644_change_datetimes_to_datetimez.down.sql  20240704191644_change_datetimes_to_datetimez.up.sql
src/: lib.rs  main.rs
src/data_sources/bybit/rest/: order_create.rs
src/data_sources/bybit/ws/: bybit_ws_api.rs
src/indicators/: indicator_type.rs  pmar.rs
src/models/: interval.rs  mod.rs  timeseries.rs  timeseries_builder.rs  trade.rs  trade_builder.rs
src/models/database/: db.rs  db_trade.rs  mod.rs
src/models/message_payloads/: create_db_trade_payload.rs  finish_db_trade_payload.rs  mod.rs
src/models/setups/: setup.rs  setup_finder.rs  setup_finder_builder.rs
src/resolution_strategies/: pmarp_vs_percentage.rs
src/run_configs/: always_true.rs  manual_candles.rs  mod.rs  multiple_strategies.rs  ws_only.rs
src/trading_strategies/public/: mod.rs  true_once_strategy.rs  true_twice_strategy.rs
src/utils/: constants.rs  mod.rs
